package org.example.hwshop.domain;

public enum SetupType {
    LAPTOP, SERVER
}