package org.example.hwshop.domain;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

import java.util.ArrayList;
import java.util.List;

@Data
@AllArgsConstructor
@NoArgsConstructor
public class StorageControllerWithDisks {
    private StorageController controller;
    private List<Disk> disks = new ArrayList<>();
}
