@startuml

abstract class Hardware {
  - warehouseId : long
  - manufacturer : String
  - model : String
}

class Laptop extends Hardware {
  - processor : String
  - memory : String
  - diskPorts : int
}

class Server extends Hardware {
  - processor : String
  - memory : String
  - pciBuses : int
  - pcixBuses : int
  - pcieBuses : int
}

class Disk extends Hardware {
  - size : String
  - port : String
}

class StorageController extends Hardware {
  - bus : String
  - diskPortType : String
  - diskPorts : int
}

class StorageControllerWithDisks {
  - controller : StorageController
  - disks : List<Disk>
}

enum SetupType {
  LAPTOP
  SERVER
}

class Setup {
  - id : long
  - type : SetupType
  - laptop : Laptop
  - server : Server
  - disks : List<Disk>
  - controllers : List<StorageControllerWithDisks>
}

interface HardwareRepository
class CsvHardwareRepository
CsvHardwareRepository ..|> HardwareRepository

class SetupRepository
class SetupService
class SetupController
class RestExceptionHandler

class SetupCreateRequest
class HardwareAddRequest
class SetupResponse
class DiskDTO
class ControllerDTO

SetupController --> SetupService
SetupService --> SetupRepository
SetupService --> HardwareRepository
Setup --> Laptop
Setup --> Server
Setup --> Disk
Setup --> StorageControllerWithDisks

SetupController --> SetupCreateRequest
SetupController --> HardwareAddRequest
SetupController --> SetupResponse
SetupResponse --> DiskDTO
SetupResponse --> ControllerDTO

@enduml